force-app/main/default/objects/Scenario_Model__c.object
<CustomObject>
    <description>Used to save a scenario and roll up data from child Scenario Model Input records to gauge overall differences between baseline and scenario emissions.</description>
    <fields>
        <fullName>Baseline_Year__c</fullName>
        <label>Baseline Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scenario_Planner_Years</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SP_Business_Units</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESG_Initiative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ESG Initiative</label>
        <referenceTo>ESG_Initiative__c</referenceTo>
        <relationshipLabel>Scenario Models</relationshipLabel>
        <relationshipName>Scenario_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Year__c</fullName>
        <label>Target Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scenario_Planner_Years</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Baseline_Emissions_tCO2e__c</fullName>
        <formula>Total_Scope_1_Baseline_Emissions__c + Total_Scope_2_MB_Baseline_Emissions__c +  Total_Scope_3_Baseline_Emissions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Baseline Emissions (tCO2e)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scenario_Emissions_Savings__c</fullName>
        <formula>Total_Scenario_Emissions_Savings_tCO2e__c /  Total_Baseline_Emissions_tCO2e__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Scenario Emissions Savings (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Scenario_Emissions_Savings_tCO2e__c</fullName>
        <formula>Total_Baseline_Emissions_tCO2e__c - Total_Scenario_Emissions_tCO2e__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Scenario Emissions Savings (tCO2e)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scenario_Emissions_tCO2e__c</fullName>
        <formula>Total_Scope_1_Scenario_Emissions__c + Total_Scope_2_MB_Scenario_Emissions__c + Total_Scope_3_Scenario_Emissions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Scenario Emissions (tCO2e)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scope_1_Baseline_Emissions__c</fullName>
        <label>Total Scope 1 Baseline Emissions</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scope_1_Scenario_Emissions__c</fullName>
        <label>Total Scope 1 Scenario Emissions</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scope_2_LB_Baseline_Emissions__c</fullName>
        <label>Total Scope 2 LB Baseline Emissions</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scope_2_LB_Scenario_Emissions__c</fullName>
        <label>Total Scope 2 LB Scenario Emissions</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scope_2_MB_Baseline_Emissions__c</fullName>
        <label>Total Scope 2 MB Baseline Emissions</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scope_2_MB_Scenario_Emissions__c</fullName>
        <label>Total Scope 2 MB Scenario Emissions</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scope_3_Baseline_Emissions__c</fullName>
        <label>Total Scope 3 Baseline Emissions</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scope_3_Scenario_Emissions__c</fullName>
        <label>Total Scope 3 Scenario Emissions</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Scenario Model</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Total_Scenario_Emissions_Savings_tCO2e__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scenario Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scenario Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>