force-app/main/default/objects/Scenario_Model__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Scenario_Emissions_Savings_tCO2e__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>